$Id: ChangeLog 4186 2015-12-14 20:51:03Z chrfranke $

2015-12-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 320 Series SSDs: 1.8" microSATA
	- Intel 53x and Pro 2500 Series SSDs: Rename, add 535 (ticket #625),
	  add Pro 2500
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: Rename,
	  add S3510/3610, 1.2TB, 1.6TB
	- USB: LaCie (0x059f:0x106f) (ticket #624)
	- USB: WD My Passport (0x1058:0x071a, 0x1058:0x0816)
	- USB: Initio (0x13fd:0x1650)
	- USB: Unknown (0xabcd:0x6103)

	update-smart-drivedb.in: Add '-s SMARTCTL' option.
	update-smart-drivedb.8.in: Document it.

2015-12-07  Christian Franke  <franke@computer.org>

	configure.ac: Append 'svn' to list of download tools.

	update-smart-drivedb.in: Use HTTPS download by default.
	Add options '-t TOOL', '-u LOCATION', '--cacert FILE',
	'--capath DIR', '--insecure' and '--dryrun'.
	Add 'svn' as new download tool.
	Ignore differences in SVN Id string (re-added).
	Remove usage of 'which' command.

	update-smart-drivedb.8.in: Document the new options.

2015-11-23  Christian Franke  <franke@computer.org>

	atacmds.cpp: parse_attribute_def(): Init buffers before sscanf() call
	(cppcheck-1.71: uninitvar).

	scsiprint.cpp: Fix GLTSD bit set/cleared info messages (ticket #621).

2015-11-22  Christian Franke  <franke@computer.org>

	Makefile.am: Add NEWS file to svnversion.h target.

	os_win32/installer.nsi: Select 64-bit version on 64-bit Windows.
	Fix installation of runcmda.exe.  Update links.

2015-11-15  Christian Franke  <franke@computer.org>

	configure.ac: Check whether MinGW adds an application manifest.

	Makefile.am: Add default manifest for MinGW builds.

	os_win32/default.manifest: New default application manifest.
	Remove external application manifests.

	os_win32/installer.nsi: Use macros from 'LogicLib.nsh' where possible.
	Add missing MessageBox /SD options.
	Remove external application manifests.

2015-11-07  Christian Franke  <franke@computer.org>

	drivedb.h: